# TP-P1

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TP-P1
include/: incidentes.h  inventory.h  menus.h  registers.h  reports.h  sensores.h  utils.h
src/: gui.c  incidentes.c  inventory.c  main.c  menus.c  registers.c  reports.c  sensores.c  utils.c
